...
            "value" : "Ändern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Change"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cambiar"
...
            "value" : "Voreinstellungen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Presets"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Preajustes"
...
            "value" : "Als Bild Speichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save as Image"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar como Imagen"
...
            "value" : "Auswählen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Seleccionar"
...
            "value" : "Bild"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Image"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Imagen"
...
            "value" : "Keine"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "None"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ninguno"
...
    },
    "type_sfsymbol_label" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "SF Symbol"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "SF Symbol"
...
